# my-daily-log

./: .gitignore  daily_schedule.md  pyproject.toml
my-daily-log/: __main__.py  config.py  new_day.py
