[tool.poetry]
name = "my-daily-log"
version = "1.0.0"
description = "CLI utility to help create a personal daily log and keep on top of accomplishments towards your goals."
authors = ["Derek Keeler"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
docopt = "^0.6.2"

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"
black = "^19.10b0"
mypy = "^0.770"
pytest-cov = "^2.9.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
